[tool.poetry]
name = "aeraudioviz"
version = "0.1.0"
description = "A package to create videos with dynamic effects based on audio characteristics."
authors = ["Lee Cameron"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pandas = "^2.1.3"
numpy = "^1.26.2"
librosa = "^0.10.1"
matplotlib = "^3.8.2"
moviepy = "^1.0.3"
opencv-python = "^4.8.1.78"
tqdm = "^4.66.1"
jupyter = {version = "^1.0.0", optional = true}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.extras.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
